@@ -1,5 +1,10 @@
 2009-01-20  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-session.c: (panel_session_init): add a reminder about things to
+	check when migrating to eggsmclient.
+
+2009-01-20  Vincent Untz  <vuntz@gnome.org>
+
 	Connect to the session manager only when we're really ready, so that
 	the struts are really set. Therefore, nautilus doesn't have jumping
 	icons on login.
